<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddStudentActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="25dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/field_name"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/field_first_name"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_vertical|end"
                android:text="@string/field_gender"/>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_row="2"
                android:layout_column="1"
                android:orientation="horizontal">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.5"
                    android:scaleY="0.5"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:scaleX="0.5"
                    android:scaleY="0.5"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/field_email"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:inputType="textEmailAddress"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="end|center_vertical"
                android:text="@string/field_birthdate"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_birthdate"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/field_group"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:inputType="text"
                android:text="@string/example_group"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_gravity="end"
                android:text="@string/field_status"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_gravity="end">

            <Switch
                    android:id="@+id/simpleSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

        </LinearLayout>

    </GridLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:gravity="center_horizontal|bottom">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>