<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentDetailsActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="35dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:text="@string/field_name"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/student_name"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:text="@string/field_first_name"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/student_first_name"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:text="@string/field_gender"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/student_gender"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:text="@string/field_birthdate"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/student_birthdate"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="15dp"
                android:text="@string/field_group"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_marginBottom="15dp"
                android:layout_gravity="end"
                android:id="@+id/student_group"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:text="@string/field_status"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_gravity="end"
                android:id="@+id/student_status"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>